--- a/kubernetes/myapp/myapp-deployment.yaml
+++ b/kubernetes/myapp/myapp-deployment.yaml
@@ -19,11 +19,11 @@ spec:
         - containerPort: 8080
         resources:
           requests:
-            memory: "512Mi"
-            cpu: "256m"
+            memory: "1024Mi"
+            cpu: "512m"
           limits:
-            memory: "512Mi"
-            cpu: "256m"
+            memory: "1024Mi"
+            cpu: "512m"
         env:
         - name: SPRING_DATASOURCE_URL
           value: jdbc:mysql://mysql:3306/mydb
@@ -31,3 +31,11 @@ spec:
           value: root
         - name: SPRING_DATASOURCE_PASSWORD
           value: password
+        - name: SPRING_REDIS_HOST
+          value: redis://redis:6379
+        - name: SPRING_REDIS_PORT
+          value: "6379"
+        - name: REDISSON_ADDRESS
+          value: redis://redis:6379
+        - name: REDISSON_PASSWORD
+          value: redis
